Ch01-04.헤더 영역 실습 -2 (11분 정도까지)

--- a/Ch01_에어비앤비 클론 코딩/index.html
+++ b/Ch01_에어비앤비 클론 코딩/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./index.css" />
     <title>Clone Coding</title>
   </head>
@@ -21,6 +22,13 @@
             src="./img/Magnifying_glass_icon.svg"
             alt=""
           />
+        </div>
+      </div>
+      <div id="header-right-section">
+        <div id="do-airbnb">당신의 강의를 패스트캠퍼스하세요.</div>
+        <div id="profile-section">
+          <img width="16" src="./img/list.svg" alt="" />
+          <img width="30" src="./img/user-circle.svg" alt="" />
         </div>
       </div>
     </header>
