Ch01-08.숙소 리스트 아이템 만들기-실습

--- a/Ch01_에어비앤비 클론 코딩/index.html
+++ b/Ch01_에어비앤비 클론 코딩/index.html
@@ -32,5 +32,255 @@
         </div>
       </div>
     </header>
+    <div id="category-bar">
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/airplane.svg" alt="" />
+        <div>한옥</div>
+      </button>
+      <button class="category-button">
+        <img src="./img/armchair.svg" alt="" />
+        <div>민박</div>
+      </button>
+    </div>
+    <main>
+      <div id="place-items-wrapper">
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+        <div class="place-list-item">
+          <div class="place-image-wrapper">
+            <img src="https://picsum.photos/1000/1000" alt="" />
+            <img class="heart-icon" src="./img/baseball.svg" alt="" />
+          </div>
+          <div class="description-section">
+            <div class="description-section_title">lorem ipsum</div>
+            <div>lorem ipsum 2</div>
+            <div>lorem ipsum 3</div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
