Ch01-09.플로팅 버튼 만들기-이론,실습

--- a/Ch01_에어비앤비 클론 코딩/index.html
+++ b/Ch01_에어비앤비 클론 코딩/index.html
@@ -282,5 +282,9 @@
         </div>
       </div>
     </main>
+    <button id="floating-map-button">
+      <span>지도 표시하기</span>
+      <img width="16" src="./img/map-trifold.svg" alt="" />
+    </button>
   </body>
 </html>
