--- a/Ch03_FireWatch/index.html
+++ b/Ch03_FireWatch/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
-      <a href="#" id="title" class="button-in-header">THE MOUNTAIN</a>
+      <!-- doucument tiltle 부분으로 이동 -->
+      <a href="#document-title" id="title" class="button-in-header"
+        >THE MOUNTAIN</a
+      >
       <div id="right-buttons">
         <a href="#" class="button-in-header">MOUNTAIN</a>
         <a href="#" class="button-in-header">AMAZING BLOG</a>
@@ -1671,6 +1674,19 @@
           </g>
         </g>
       </svg>
+    </div>
+    <div id="main-content-wrapper">
+      <p id="document-title">아름다운 금수강산</p>
+      <div id="mountain-tag-wrapper">
+        <ul class="mountain-content-wrpper">
+          <li class="mountain-content-list">지리산</li>
+          <li class="mountain-content-list">금강산</li>
+        </ul>
+        <ul class="mountain-content-wrpper">
+          <li class="mountain-content-list">한라산</li>
+          <li class="mountain-content-list">북한산</li>
+        </ul>
+      </div>
     </div>
   </body>
 
