--- a/Ch04_카카오 인재영입 페이지/index.html
+++ b/Ch04_카카오 인재영입 페이지/index.html
@@ -89,6 +89,32 @@
       <section id="panel1-img">
         <img id="flying-santa-image" src="./imgs/santa_flying.png" alt="" />
       </section>
+      <div id="white-wrapper">
+        <div id="slider-container">
+          <div id="slider-content-wrapper">
+            <div id="slider-content">
+              <img
+                class="slider-image"
+                src="https://picsum.photos/id/1/600/933"
+                alt=""
+              />
+              <img
+                class="slider-image"
+                src="https://picsum.photos/id/59/600/933"
+                alt=""
+              />
+              <img
+                class="slider-image"
+                src="https://picsum.photos/id/89/600/933"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="slider-button" id="left-button">&lt;</div>
+          <div class="slider-button" id="right-button">&gt;</div>
+          <div id="slider-index">1/3</div>
+        </div>
+      </div>
     </main>
   </body>
   <script>
@@ -143,6 +169,44 @@
 
         flyingSantaImage.style.transform = `translate(${translateX}px, ${translateY}px) rotate(${rotationDegree}deg)`;
       }
+    });
+
+    // 이미지 슬라이더  ////
+    let currentImage = 0;
+
+    const sliderContentWrapper = document.getElementById(
+      "slider-content-wrapper"
+    );
+    const sliderImages = document.querySelectorAll(".slider-image");
+    const sliderIndex = document.getElementById("slider-index");
+
+    const handleSliderChange = (step) => {
+      currentImage += step;
+
+      if (currentImage < 0) {
+        currentImage = sliderImages.length - 1;
+      } else if (currentImage >= sliderImages.length) {
+        currentImage = 0;
+      }
+
+      sliderContentWrapper.scrollLeft = sliderImages[currentImage].offsetLeft;
+      sliderIndex.innerText = `${currentImage + 1}/${sliderImages.length}`;
+    };
+
+    document.getElementById("left-button").addEventListener("click", () => {
+      handleSliderChange(-1);
+    });
+    document.getElementById("right-button").addEventListener("click", () => {
+      handleSliderChange(1);
+    });
+
+    sliderContentWrapper.addEventListener("scroll", () => {
+      const imageWidth =
+        document.querySelectorAll(".slider-image")[0].offsetWidth;
+
+      currentImage = Math.floor(sliderContentWrapper.scrollLeft / imageWidth);
+
+      sliderIndex.innerText = `${currentImage + 1}/${sliderImages.length}`;
     });
   </script>
 </html>
