--- a/Ch05_넥스트 레벨 페어즈/index.html
+++ b/Ch05_넥스트 레벨 페어즈/index.html
@@ -20,7 +20,38 @@
         <span class="preloader_btn_hold">Hold</span>
       </button>
     </section>
-    <section class="header hidden-area">Header</section>
+    <section class="header hidden-area">
+      <span class="circle" id="circle-1"></span>
+      <span class="circle" id="circle-2"></span>
+      <img
+        id="cube_image_1"
+        src="./imgs/Lovepik_com-401467010-cube.png"
+        alt=""
+        class="cube_image"
+      />
+      <img
+        id="cube_image_2"
+        src="./imgs/Lovepik_com-401467010-cube.png"
+        alt=""
+        class="cube_image"
+      />
+      <img
+        id="cube_image_3"
+        src="./imgs/Lovepik_com-401467010-cube.png"
+        alt=""
+        class="cube_image"
+      />
+      <img
+        id="cube_image_4"
+        src="./imgs/Lovepik_com-401467010-cube.png"
+        alt=""
+        class="cube_image"
+      />
+      <h1 class="header_title">
+        <div>LAST ART</div>
+        <div>PROJECTS</div>
+      </h1>
+    </section>
   </body>
   <script>
     document.addEventListener("mousemove", (e) => {
@@ -65,6 +96,7 @@
 
     const preloaderBtn = document.querySelector(".preloader_btn");
     const preloaderHold = document.querySelector(".preloader_btn_hold");
+    const header = document.querySelector(".header");
 
     let intervalId = null;
     let scale = 1;
@@ -85,8 +117,6 @@
 
         // 특정 threshold 이상 지났을 때
         if (scale >= 1 + preloaderHideThreshold) {
-          const header = document.querySelector(".header");
-
           document.querySelector(".preloader").classList.add("hidden-area");
 
           // 숨어 있던 header 등장 시키기
@@ -110,6 +140,37 @@
           clearInterval(intervalId);
         }
       }, 10);
+    });
+
+    // 마우스 움직일때의 애니메이션 이벤트
+    header.addEventListener("mousemove", (e) => {
+      const xRelativeToHeader = e.clientX / header.clientWidth;
+      const yRelativeToHeader = e.clientY / header.clientHeight;
+
+      document.querySelector(".header_title").style.transform = `translate(${
+        xRelativeToHeader * -50
+      }px, ${yRelativeToHeader * -50}px)`;
+
+      document.querySelector("#circle-1").style.transform = `translate(${
+        xRelativeToHeader * -25
+      }px, ${yRelativeToHeader * -25}px)`;
+
+      document.querySelector("#circle-2").style.transform = `translate(${
+        xRelativeToHeader * 25
+      }px, ${yRelativeToHeader * 25}px)`;
+
+      document.querySelector("#cube_image_1").style.transform = `translate(${
+        xRelativeToHeader * -15
+      }px, ${yRelativeToHeader * -15}px)`;
+      document.querySelector("#cube_image_2").style.transform = `translate(${
+        xRelativeToHeader * -10
+      }px, ${yRelativeToHeader * -10}px)`;
+      document.querySelector("#cube_image_3").style.transform = `translate(${
+        xRelativeToHeader * 15
+      }px, ${yRelativeToHeader * 15}px)`;
+      document.querySelector("#cube_image_4").style.transform = `translate(${
+        xRelativeToHeader * 5
+      }px, ${yRelativeToHeader * 5}px)`;
     });
   </script>
 </html>
