--- a/Ch05_넥스트 레벨 페어즈/index.html
+++ b/Ch05_넥스트 레벨 페어즈/index.html
@@ -52,6 +52,34 @@
         <div>PROJECTS</div>
       </h1>
     </section>
+    <section class="poster hidden-area">
+      <div class="poster_parallax">
+        <div id="poster-image_wrapper_1" class="poster-image_wrapper">
+          <img
+            id="poster-image_1"
+            src="./imgs/posterImages/poster_image_1.png"
+            alt=""
+            class="poster_image"
+          />
+        </div>
+        <div id="poster-image_wrapper_2" class="poster-image_wrapper">
+          <img
+            id="poster-image_2"
+            src="./imgs/posterImages/poster_image_2.png"
+            alt=""
+            class="poster_image"
+          />
+        </div>
+        <div id="poster-image_wrapper_3" class="poster-image_wrapper">
+          <img
+            id="poster-image_3"
+            src="./imgs/posterImages/poster_image_3.png"
+            alt=""
+            class="poster_image"
+          />
+        </div>
+      </div>
+    </section>
   </body>
   <script>
     document.addEventListener("mousemove", (e) => {
@@ -119,9 +147,14 @@
         if (scale >= 1 + preloaderHideThreshold) {
           document.querySelector(".preloader").classList.add("hidden-area");
 
+          const poster = document.querySelector(".poster");
+
           // 숨어 있던 header 등장 시키기
           header.classList.remove("hidden-area");
+          poster.classList.remove("hidden-area");
+
           header.classList.add("shown-area");
+          poster.classList.add("shown-area");
 
           clearInterval(intervalId);
         }
@@ -171,6 +204,45 @@
       document.querySelector("#cube_image_4").style.transform = `translate(${
         xRelativeToHeader * 5
       }px, ${yRelativeToHeader * 5}px)`;
+    });
+
+    // IntersectionObserver 로 관찰 생성
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach((entry) => {
+          // 교차 중일 때
+          if (entry.isIntersecting) {
+            entry.target.classList.add("poster-image_state_visible");
+          }
+        });
+      },
+      {
+        // 해당 element 가 20% 보일 때
+        threshold: 0.2,
+      }
+    );
+
+    // 각각의 poster 관찰
+    document.querySelectorAll(".poster-image_wrapper").forEach((poster) => {
+      observer.observe(poster);
+    });
+
+    const posterParallax = document.querySelector(".poster_parallax");
+    posterParallax.addEventListener("mousemove", (e) => {
+      const xRelativeToPosterParallax = e.clientX / posterParallax.clientWidth;
+      const yRelativeToPosterParallax = e.clientY / posterParallax.clientHeight;
+
+      document.querySelector(
+        "#poster-image_wrapper_2"
+      ).style.transform = `translate(${xRelativeToPosterParallax * -40}px, ${
+        yRelativeToPosterParallax * -40
+      }px)`;
+
+      document.querySelector(
+        "#poster-image_wrapper_3"
+      ).style.transform = `translate(${xRelativeToPosterParallax * 40}px, ${
+        yRelativeToPosterParallax * 40
+      }px)`;
     });
   </script>
 </html>
