Ch05 - 07 스크롤을 내렸을 때 나타나는 이미지 - 구현 2

--- a/Ch05_넥스트 레벨 페어즈/index.html
+++ b/Ch05_넥스트 레벨 페어즈/index.html
@@ -227,6 +227,7 @@
       observer.observe(poster);
     });
 
+    // 마우스 움직에 따라 이미지 움직이기
     const posterParallax = document.querySelector(".poster_parallax");
     posterParallax.addEventListener("mousemove", (e) => {
       const xRelativeToPosterParallax = e.clientX / posterParallax.clientWidth;
