--- a/Part2-Canvas/Ch03_LG카운트다운/index.html
+++ b/Part2-Canvas/Ch03_LG카운트다운/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>LG카운트다운</title>
   </head>
   <body>
+    <img id="ring" src="./img/circle.png" alt="" />
     <canvas></canvas>
+    <div id="countdown">
+      <span>3</span>
+      <span>2</span>
+      <span>1</span>
+    </div>
     <script src="./index.js" type="module"></script>
-    å
   </body>
 </html>
