Ch05 - 03 Background 클래스 만들기

--- a/Part2-Canvas/Ch05_미니게임/index.html
+++ b/Part2-Canvas/Ch05_미니게임/index.html
@@ -7,6 +7,9 @@
     <title>미니게임</title>
   </head>
   <body>
+    <img src="./assets/bg1.png" alt="" id="bg1-img" class="asset-img" />
+    <img src="./assets/bg2.png" alt="" id="bg2-img" class="asset-img" />
+    <img src="./assets/bg3.png" alt="" id="bg3-img" class="asset-img" />
     <canvas></canvas>
     <script type="module" src="./index.js"></script>
   </body>
