--- a/Part2-Canvas/Ch05_미니게임/index.html
+++ b/Part2-Canvas/Ch05_미니게임/index.html
@@ -10,6 +10,7 @@
     <img src="./assets/bg1.png" alt="" id="bg1-img" class="asset-img" />
     <img src="./assets/bg2.png" alt="" id="bg2-img" class="asset-img" />
     <img src="./assets/bg3.png" alt="" id="bg3-img" class="asset-img" />
+    <img src="./assets/Wall.png" alt="" id="wall-img" class="asset-img" />
     <canvas></canvas>
     <script type="module" src="./index.js"></script>
   </body>
