--- a/Part2-Canvas/Ch06_밧줄이펙트/index.html
+++ b/Part2-Canvas/Ch06_밧줄이펙트/index.html
@@ -7,6 +7,7 @@
     <title>Rope Physics</title>
   </head>
   <body>
+    <img src="./assets/glowing.png" id="light-img" class="asset-img" />
     <canvas></canvas>
 
     <script type="module" src="./index.js"></script>
